feature: attack, ability and card usage limitation